update status EmployeeProject and update Project